update：ios sdk to 2.0.0.0

--- a/ModulesDevProject_iOS/ModulesDevProject/UZApp/widget/html/module-con.html
+++ b/ModulesDevProject_iOS/ModulesDevProject/UZApp/widget/html/module-con.html
@@ -79,6 +79,9 @@
           case 'sendMsgFeedback':
           log='sendMsgFeedback:'+ret.result+' messageid:'+ret.messageId;
           break;
+          case 'apns':
+          log='apns click:'+ret.result+' msg:'+ret.msg;
+          break;
       }
       if(log){
           printfLog(log);
