--- a/ModulesDevProject_iOS/ModulesDevProject/UZApp/widget/html/module-con.html
+++ b/ModulesDevProject_iOS/ModulesDevProject/UZApp/widget/html/module-con.html
@@ -86,6 +86,9 @@
           case 'apns':
           log='apns click:'+ret.result+' msg:'+ret.msg;
           break;
+          case 'AppLinkPayload':
+          log='applink:'+ret.result+' msg:'+ret.payload;
+          break;
       }
       if(log){
           printfLog(log);
