update: 添加新版本压缩包
update: 更新产物包

--- a/ModulesDevProject_iOS/ModulesDevProject/UZApp/widget/html/module-con.html
+++ b/ModulesDevProject_iOS/ModulesDevProject/UZApp/widget/html/module-con.html
@@ -130,7 +130,7 @@
     };
     function bindAlias(){
         var param={
-            alias:'hello',
+            alias:'newAlias',
         };
         push.bindAlias(param,function(ret,err){
                        alert("ret = " + JSON.stringify(ret) + "err = " + JSON.stringify(err));
