[update]:update demo html

--- a/Demo/AppDemo2024/AppDemo2024/html/main.html
+++ b/Demo/AppDemo2024/AppDemo2024/html/main.html
@@ -74,6 +74,7 @@
         switch (ret.type) {
             case 'cid':
                 log = 'cid:' + ret.cid;
+                console.log(ret.cid);
                 break;
             case 'payload':
                 log = 'payload:' + ret.payload;
